<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/addContactLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/contact_first_name_hint"
        style="@style/AppTheme.Text"
        android:text="user@test.pl"/>

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/contact_last_name_hint"
        style="@style/AppTheme.Text"
        android:text="user@test.pl"/>

    <EditText
        android:id="@+id/companyNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/contact_company_name_hint"
        style="@style/AppTheme.Text"
        android:text="user@test.pl"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/contact_email_hint"
        style="@style/AppTheme.Text"
        android:text="user@test.pl"/>

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/contact_phone_hint"
        style="@style/AppTheme.Text"
        android:text="user@test.pl"/>

    <Button
        android:id="@+id/addContactButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        style="@style/AppTheme.Text"/>

</LinearLayout>
